# ferns

./: CMakeLists.txt  CMakeSettings.json  portfile.cmake  vcpkg.cmake  vcpkg.json
cmake/: dashboard.cmake  find_lib_thirdy.cmake
cmake/summary/: dashboard.cmake  version.cmake
cmake/templates/: FernsConfig.cmake.in
include/: cv.h  logger.h  printf_logger.h
src/: CMakeLists.txt  affine_image_generator06.cc  affine_image_generator06.h  affine_transformation_range.cpp  affine_transformation_range.h  buffer_management.cpp  buffer_management.h  cmphomo.cc  cmphomo.h  fern_based_point_classifier.cc  fern_based_point_classifier.h  ferns.cc  ferns.h  fine_gaussian_pyramid.cpp  fine_gaussian_pyramid.h  general.h  homography06.cc  homography06.h  homography_estimator.cpp  homography_estimator.h  keypoint.h  mcv.cc  mcv.h  mcvGaussianSmoothing.cc  mcvGaussianSmoothing.h  planar_pattern_detector.cpp  planar_pattern_detector.h  planar_pattern_detector_builder.cpp  planar_pattern_detector_builder.h  pyr_yape06.cpp  pyr_yape06.h  template_matching_based_tracker.cc  template_matching_based_tracker.h
